[metadata]
name = emojicons
summary = A very small python script that exposes a CLI and consumes http://emojicons.com/
description-file =
    README.rst
author = Mario Santos
author-email = mario.rf.santos@gmail.com
classifier =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

install_requires = lxml

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[entry_points]
console_scripts =
    emoji = emojicons.emoji:main